# sauerkraut

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
examples/: combined_copy_serialize.py  copy_then_serialize.py  exclude_dead_locals.py  exclude_locals.py  for_loop.py  replace_locals.py  resume_globals.py  with_globals.py  with_greenlet.py  with_numpy.py
sauerkraut/: CMakeLists.txt  __init__.py  gpu_adapters.py  liveness.py  sauerkraut.C
sauerkraut/buffer/: py_interpreter_frame.fbs
sauerkraut/greenlet_compat/: CMakeLists.txt
sauerkraut/include/: py_structs.h  pyref.h  sauerkraut_cpython_compat.h  utils.h
sauerkraut/serdes/include/: serdes.h
test/: test.py
